[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/LevelLoader.gd" type="Script" id=1]
[ext_resource path="res://Nodes/Pickup Spawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://Nodes/Wall Spawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/BackgroundDrawer.gd" type="Script" id=4]

[node name="Level Loader" type="Node2D"]
script = ExtResource( 1 )

[node name="Pickup Spawner" parent="." instance=ExtResource( 2 )]

[node name="Wall Spawner" parent="." instance=ExtResource( 3 )]

[node name="Wall Drawer" type="Node2D" parent="."]
script = ExtResource( 4 )
number_of_shadows = 5
expansion_rate = 1.05
line_thickness = 5.0
[connection signal="colour_change" from="." to="Wall Drawer" method="_on_Level_Loader_colour_change"]
[connection signal="level_start" from="." to="Wall Drawer" method="_on_Level_Loader_level_start"]
[connection signal="level_start" from="." to="Pickup Spawner" method="_on_Level_Loader_level_start"]
[connection signal="level_start" from="." to="Wall Spawner" method="_on_Level_Loader_level_start"]
[connection signal="pickups_gone_signal" from="Pickup Spawner" to="." method="_on_Pickup_Spawner_pickups_gone_signal"]
[connection signal="polygon_created" from="Wall Spawner" to="Wall Drawer" method="_on_Wall_Spawner_polygon_created"]
[connection signal="polygon_created" from="Wall Spawner" to="Pickup Spawner" method="_on_Wall_Spawner_polygon_created"]
